--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,11 @@
   command = "npm run build"
   publish = ".next"
 
+[build.processing]
+  skip_processing = false
+
 [build.environment]
+  NPM_FLAGS = "--prefer-offline --no-audit"
   NEXT_PUBLIC_API_URL = "https://resume-builder-backend-o1dc.onrender.com/"
   NODE_VERSION = "18"
   PYTHON_VERSION = "3.9"
