--- a/netlify.toml
+++ b/netlify.toml
@@ -9,8 +9,10 @@
   NPM_FLAGS = "--prefer-offline --no-audit"
   NEXT_PUBLIC_API_URL = "https://resume-builder-backend-o1dc.onrender.com/"
   NODE_VERSION = "18"
-  # Explicitly disable Python
+  # Completely disable Python
   PYTHON_ENABLE = "false"
+  # Force empty Python version to prevent any Python processing
+  PYTHON_VERSION = ""
 
 
 # For Next.js 13+ with App Router
